--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -106,7 +106,8 @@
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Account Number/ICCID <span class="text-danger">*</span></label>
-										<input type="text" name="account_no" id="" class="form-control" ng-model="device.device_account_no" number ui-mask="{{'9999 9999 9999 9999 9999'}}" placeholder="" required>
+										<!-- <input type="text" name="account_no" id="" class="form-control" ng-model="device.device_account_no" number ui-mask="{{'9999 9999 9999 9999 9999'}}" placeholder="" required> -->
+										<input type="text" name="account_no" id="" class="form-control" ng-model="device.device_account_no" number minlength="19" maxlength="20" placeholder="" required>
 									</div>
 								</div>
 								<div class="row">
