--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -115,7 +115,7 @@
 						<div class="wrap-reset m-0 pt-20"> 
 							<div class="row pos-r mb-40">
 								<div class="col-sm-4 col-md-4 filterorder">
-									<label class="control-label" ng-init="filtershow=true">
+									<!-- <label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
 									<label class="control-label" uib-dropdown on-toggle="toggled(open)">
@@ -124,20 +124,20 @@
 											<li><a href="" ng-click="orderByMe('name')">Name</a></li>
 											<li><a href="" ng-click="orderByMe('group')">Group</a></li>
 										</ul>
-									</label>
+									</label> -->
 								</div>
 								<div class="col-sm-4 col-md-4 search">
 									<input type="text" class="form-control" placeholder="Search by text....">
 									<button class="btn btn-default br-2-r" type="button">Search</button>
 								</div>
 								<div class="col-sm-4 col-md-4">
-									<div class="gridlistbar ta-r pull-right">
+									<!-- <div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
 										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
-									</div>
+									</div> -->
 								</div>
-								<div class="filterfields" ng-hide="filtershow">
+								<!-- <div class="filterfields" ng-hide="filtershow">
 									<div class="col-sm-4 col-md-4">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
@@ -150,13 +150,13 @@
 										<label for="fblocation" class="control-label">Search by group</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="group">
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div ng-class="class">
 								<div class="glview">
 									<md-content>
 										<md-card class="slaveusers" ng-repeat="userdetail in usergroupslist | limitTo:totalDisplayed | filter:text | filter:title | filter:group | orderBy:myOrderBy"">
-											<a ui-sref="app.admin.user.user-profile"><img ng-src="{{imagePath}}/users/{{ user.imagename }}.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.user.user-profile"><img ng-src="{{userdetail.user_photo ? userdetail.user_photo : 'images/avatar.jpg'}}" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ userdetail.user.user_first_name }}</h2>
 												<p>{{ userdetail.user.user_phone_no }}</p>
@@ -167,7 +167,7 @@
 											</div>
 										</md-card>
 									</md-content>
-									<button ng-if="usergroupslist && usergroupslist.length>0" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button ng-if="usergroupslist && usergroupslist.length > 8" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
