--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -176,7 +176,7 @@
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
 								<div class="col-sm-4 col-md-4 filterorder">
-									<label class="control-label" ng-init="filtershow=true">
+									<!-- <label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
 									<label class="control-label" uib-dropdown on-toggle="toggled(open)">
@@ -186,7 +186,7 @@
 											<li><a href="" ng-click="orderByMe('facility')">Facility</a></li>
 											<li><a href="" ng-click="orderByMe('noofusers')">Users</a></li>
 										</ul>
-									</label>
+									</label> -->
 								</div>
 								<div class="col-sm-8 col-md-8">
 									<div class="row">
@@ -217,7 +217,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="filterfields" ng-hide="filtershow">
+								<!-- <div class="filterfields" ng-hide="filtershow">
 									<div class="col-sm-4 col-md-3">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
@@ -230,7 +230,7 @@
 										<label for="fblocation" class="control-label">Search by facility</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="facility">
 									</div>
-								</div>
+								</div> -->
 							</div>							
 							<div ng-if="result">									
 								<div layout="row" ng-class="statusclass">									
