--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -100,7 +100,7 @@
 												
 													<div class="form-group col-sm-6 col-md-6 pr-0">
 														<label for="">Device Type <span class="text-danger">*</span></label><br/>
-														<div disabled class="btn-group btnrounded" ng-init="editDevice.device_type='slave'">
+														<div disabled class="btn-group btnrounded" ng-init="editDevice.device_type='slave'" style="pointer-events: none;opacity: 0.8;">
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'master'">Primary</label>
 															<label class="btn btn-default" ng-model="editDevice.device_type" uib-btn-radio="'slave'">Dependent</label>
 														</div>
@@ -126,7 +126,7 @@
 											<div class="form-group col-sm-6 col-md-6" >
 												<label for="">Technician <span class="text-danger">*</span></label><br/>
 												
-												<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList"  ng-model="editDevice.technician_id" required>
+												<select class="form-control" name="technician_id" ng-options="item.technician_id as item.technician_name for item in technicianList"  ng-model="editDevice.technician_id" disabled required>
 													<option value="">Select</option>
 												</select>
 												<small class="pull-right" style="margin-bottom:-5px;"><a ui-sref="app.admin.support.technician">Add Technician</a></small>
