removing status field from facility and doors

--- a/views/tmpl/admin/door/view-doors.html
+++ b/views/tmpl/admin/door/view-doors.html
@@ -78,7 +78,7 @@
 												<p><label>Facility</label> {{doorData.facility_name}}</p>
 												<p><label>Device</label> {{doorData.device_name}}</p>
 												<p><label>Door Groups</label> </p>
-												<p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p>
+												<!-- <p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p> -->
 											</div>											
 										</div>
 										
@@ -114,7 +114,7 @@
 												<label for="">Description <span class="text-danger">*</span></label>
 												<textarea name="" id="" class="form-control mb-10" placeholder="" ng-model="doorData.door_description"></textarea>
 											</div>
-											<div class="row">
+											<!-- <div class="row">
 												<div class="col-md-6 first">
 													<div class="form-group">
 														<label for="">Device Type <span class="text-danger">*</span></label><br/>
@@ -124,7 +124,7 @@
 														</div>
 													</div>
 												</div>
-											</div>
+											</div> -->
 											<div class="row">
 												<div class="form-group col-md-12 legend mt-20">
 													<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
