--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -77,7 +77,7 @@
 																			<label class="btn btn-default" ng-model="addTechnician.status" uib-btn-radio="0">Inactive</label>
 																		</div>
 																	</div>
-																	<div class="col-sm-6 col-md-6" ng-hide="addTechnician.status==0">
+																	<div class="col-sm-6 col-md-6" >
 																		<div ng-controller="DatepickerDemoCtrl">
 																			<label for="">Expiration Date <span class="text-danger">*</span></label>
 																			<div class="input-group userexp">
