--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -49,7 +49,8 @@
 														</select>
 													</div>
 												</div>
-												<div class="row">
+												
+												<div class="row" style="display:none;">
 													<div class="form-group col-sm-6 col-md-6 first">
 														<label for="">Door Status <span class="text-danger">*</span></label><br/>
 														<div class="btn-group btnrounded" ng-init="door.status = 1">
@@ -58,6 +59,7 @@
 														</div>
 													</div>
 												</div>
+
 											</div>
 											<div class="modal-footer">
 												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c door_close" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
