--- a/views/tmpl/admin/door/edit-door.html
+++ b/views/tmpl/admin/door/edit-door.html
@@ -70,13 +70,14 @@
 											<option value="" disabled>Select</option>
 										</select>
 									</div>
-									<div class="form-group col-sm-6 col-md-4 first">
+									<!-- <div class="form-group col-sm-6 col-md-4 first">
 										<label for="">Door Status <span class="text-danger">*</span></label><br/>
 										<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
 											<label class="btn btn-default" ng-model="doorData.door_status" uib-btn-radio="1">Active</label>
 											<label class="btn btn-default" ng-model="doorData.door_status" uib-btn-radio="0">Inactive</label>
 										</div>
-									</div>
+									</div> -->
+									<input type="hidden" ng-model="doorData.door_status" ng-value="1"/>
 								</div>
 								<div class="form-group row legend">
 									<div class="col-md-12">
