--- a/views/tmpl/admin/door/view-door.html
+++ b/views/tmpl/admin/door/view-door.html
@@ -65,7 +65,7 @@
 											<p><label>Name</label> {{doorData.door_name}}</p>
 											<p><label>Facility</label> {{doorData.facility_name}}</p>
 											<p><label>Door Groups</label> Entry Gate</p>
-											<p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p>
+											<!-- <p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p> -->
 										</div>
 									</div>
 								</div>
