--- a/views/tmpl/admin/facility/facility.html
+++ b/views/tmpl/admin/facility/facility.html
@@ -55,13 +55,14 @@
 														<input ng-keypress="allowNumberOnly($event);" type="text" name="zip_code" id="" maxlength="6" ng-model="facility.zip_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
-												<div class="form-group">
+												<div class="form-group" ng-init="facility.status=1" style="display:none;">
 													<label for="">Status <span class="text-danger">*</span></label><br/>
 													<div class="btn-group btnrounded" >
 														<label class="btn btn-default" ng-model="facility.status" uib-btn-radio="1">Active</label>
 														<label class="btn btn-default" ng-model="facility.status" uib-btn-radio="0">Inactive</label>
 													</div>
-												</div>												
+												</div>	
+
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="cancel_facility"ng-click="$dismiss()"><i class="fa fa-arrow-left"></i> Cancel</button>
