--- a/views/tmpl/admin/support/technician-profile.html
+++ b/views/tmpl/admin/support/technician-profile.html
@@ -53,7 +53,7 @@
 												<p><label>E-mail</label> {{technician.technician_email}}</p>
 												<p><label>Phone</label> {{technician.technician_phone}}</p>
 												<p><label>Address</label> {{technician.technician_address}}</p>
-												<p><label>Status</label> Active</p>
+												<p><label>Status</label> {{(technician.technician_status == 1)?'Active':'Inactive'}}</p>
 												<!-- <p><label>Expiration Date</label> 15/06/2017</p> -->
 											</div>
 										</div>
