--- a/views/tmpl/admin/user/user-groups-members.html
+++ b/views/tmpl/admin/user/user-groups-members.html
@@ -98,7 +98,7 @@
 							<img class="img-circle" src="images/usergroups/officehrs.png" alt="">
 						</div>
 						<h3 class="mb-10"><strong>{{currentSelectedGroupName}}</strong></h3>
-						<span class="text-muted">{{CurrentUserGroupUserCount}} Users</span>
+						<span class="text-muted">{{CurrentUserGroupUserCount}} {{CurrentUserGroupUserCount == 1 ?  'User' : 'Users'}}</span>
 						<div class="mt-40">
 							<a ng-click="showConfirm($event, usergroup_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete User Group</a>
 						</div>
