disableing links in master admin

--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -15,16 +15,13 @@
 					<span>Administration &nbsp;<fa name="angle-down"></fa></span>
 				</a>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<!-- <li><a ui-sref="app.administrator.roles">Roles Administration</a></li>
+					<!-- <li><a ui-sref="app.administrator.roles">Roles</a></li>
 					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
 					<li><a ui-sref="app.administrator.admin">Admin</a></li> -->
-					<li><a ui-sref="app.administrator.roles">Roles</a></li>
-					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
-					<li><a ui-sref="app.administrator.admin">Admin</a></li>
 					<li><a ui-sref="app.administrator.master-admin">Master Admin</a></li>
 				</ul>
 			</li>
-			<li class="dropdown" uib-dropdown>
+			<!-- <li class="dropdown" uib-dropdown>
 				<a href class="dropdown-toggle" uib-dropdown-toggle>
 					<span>Monitoring &nbsp;<fa name="angle-down"></fa></span>
 				</a>
@@ -32,8 +29,8 @@
 					<li><a ui-sref="app.">Monitor Diagnostics</a></li>
 					<li><a ui-sref="app.">Reported Issues</a></li>
 				</ul>
-			</li>
-			<li><a ui-sref="app.help"><span>Help</span></a></li>
+			</li> -->
+			<!-- <li><a ui-sref="app.help"><span>Help</span></a></li> -->
 		</ul>
 	</div>
 	
