removing rfid nfc

--- a/views/header.html
+++ b/views/header.html
@@ -82,7 +82,7 @@
 	
 	
 	<ul class="nav-right pull-right list-inline headmenu">
-		<li class="dropdown messages" uib-dropdown>
+		<!-- <li class="dropdown messages" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
 				<img src="images/bell.png" class="sm-img"><span class="badge bg-lightred">4</span>
 			</a>
@@ -146,7 +146,7 @@
 					<a ui-sref="app.admin.help.message-notification">Show all messages and notifications <fa name="angle-right" class="pull-right"></fa></a>
 				</div>
 			</div>
-		</li>
+		</li> -->
 		
 		<li class="dropdown nav-profile" uib-dropdown>
 			<a href class="dropdown-toggle" uib-dropdown-toggle>
