--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -414,7 +414,7 @@
 														</div>
 													</uib-accordion-group>
 
-													<uib-accordion-group is-open="status.open2" class="panel-default">
+													<!--<uib-accordion-group is-open="status.open2" class="panel-default">
 														<uib-accordion-heading>
 															<div ng-click="cleanAccordionFormObject('Add User','rfid')">RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></div>
 														</uib-accordion-heading>
@@ -480,7 +480,7 @@
 																</div>
 															</div>
 														</div>
-													</uib-accordion-group>
+													</uib-accordion-group>-->
 
 													<uib-accordion-group is-open="status.open3" class="panel-default">
 														<uib-accordion-heading>
@@ -546,7 +546,7 @@
 													</uib-accordion-group>
 
 
-													<uib-accordion-group is-open="status.open3" class="panel-default">
+													<!--<uib-accordion-group is-open="status.open3" class="panel-default">
 														<uib-accordion-heading>
 															<div ng-click="cleanAccordionFormObject('Add User','savenfc')">NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i></div>
 														</uib-accordion-heading>
@@ -615,7 +615,7 @@
 																</div>
 															</div>
 														</div>
-													</uib-accordion-group>
+													</uib-accordion-group>-->
 
 													<uib-accordion-group is-open="status.open4" class="panel-default">
 														<uib-accordion-heading>
