--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -445,7 +445,7 @@
 														</div>
 													</uib-accordion-group>
 
-													<uib-accordion-group is-open="status.open2" class="panel-default">
+													<!--<uib-accordion-group is-open="status.open2" class="panel-default">
 														<uib-accordion-heading>
 															<div ng-click="cleanAccordionFormObject('Edit User','editRfid')">RFID Code <i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i></div>
 														</uib-accordion-heading>
@@ -497,10 +497,7 @@
 																				<td>{{rfid_code.Detail.rfid_facility_id}}</td>
 																				<td>{{rfid_code.Door_Name}} </td>
 																				<td>
-																					<!--<select style="border: 0; width: 100%;">-->
-																					<!--<option value="" ng-selected="rfid_code.status == 1">Active</option>-->
-																					<!--<option value="" ng-selected="rfid_code.status == 0">Inactive</option>-->
-																					<!--</select>-->
+																					
 																					{{rfid_code.status==0?'Inactive':'Active'}}
 																				</td>
 																				<td class="credintialicon">
@@ -513,7 +510,7 @@
 																</div>
 															</div>
 														</div>
-													</uib-accordion-group>
+													</uib-accordion-group>-->
 
 													<uib-accordion-group is-open="status.open3" class="panel-default">
 														<uib-accordion-heading>
@@ -578,7 +575,7 @@
 														</div>
 													</uib-accordion-group>
 
-													<uib-accordion-group is-open="status.open4" class="panel-default">
+													<!--<uib-accordion-group is-open="status.open4" class="panel-default">
 														<uib-accordion-heading>
 															<div ng-click="cleanAccordionFormObject('Edit User','editNfc')">NFC Code <i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i></div>
 														</uib-accordion-heading>
@@ -628,10 +625,7 @@
 																				<td>{{nfccode.Detail.nfc_code}}</td>
 																				<td>{{nfccode.Door_Name}}</td>
 																				<td>
-																					<!--<select style="border: 0; width: 100%;">-->
-																					<!--<option value="" ng-selected="nfccode.status == 1">Active</option>-->
-																					<!--<option value="" ng-selected="nfccode.status == 0">Inactive</option>-->
-																					<!--</select>-->
+																					
 																					{{nfccode.status==0?'Inactive':'Active'}}
 																				</td>
 																				<td class="credintialicon">
@@ -644,7 +638,7 @@
 																</div>
 															</div>
 														</div>
-													</uib-accordion-group>
+													</uib-accordion-group>-->
 
 													<uib-accordion-group is-open="status.open5" class="panel-default">
 														<uib-accordion-heading>
