--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -109,7 +109,7 @@
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
 								<div class="col-sm-3 col-md-3 filterorder">
-									<label class="control-label" ng-init="filtershow=true">
+									<!-- <label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
 									<label class="control-label" uib-dropdown on-toggle="toggled(open)">
@@ -119,7 +119,7 @@
 											<li><a href="" ng-click="orderByMe('company')">Company</a></li>
 											<li><a href="" ng-click="orderByMe('phone')">Phone</a></li>
 										</ul>
-									</label>
+									</label> -->
 								</div>
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
@@ -135,12 +135,12 @@
 								</div>
 								<div class="col-sm-3 col-md-3">
 									<div class="gridlistbar ta-r pull-right">
-										<label class="control-label">View by</label>
+										<!-- <label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
-										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a>
+										<a href="" class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="changeaClass()"><i class="fa fa-th" aria-hidden="true"></i></a> -->
 									</div>
 								</div>
-								<div class="filterfields" ng-hide="filtershow">
+								<!-- <div class="filterfields" ng-hide="filtershow">
 									<div class="col-sm-3 col-md-3">
 										<label for="fbtext" class="control-label">Search by text</label> 
 										<input type="text" class="form-control" id="fbtext" ng-model="text">
@@ -157,7 +157,7 @@
 										<label for="fblocation" class="control-label">Search by phone</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="phone">
 									</div>
-								</div>
+								</div> -->
 							</div>
 							<div ng-if="status">									
 								<div layout="row" ng-class="statusclass">									
@@ -166,8 +166,8 @@
 							</div>
 							<div ng-class="class">
 								<div class="glview">
-									<md-content>			
-										<md-card ng-repeat="user in technicianList | limitTo:totalDisplayed | filter:text | filter:name | filter:facility | filter:phone | orderBy:myOrderBy track by $index">											
+									<md-content>
+										<md-card ng-repeat="user in technicianList">											
 											
 											<md-card-content>
 												<h2 class="md-title">{{ user.technician_name }}</h2>
