--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -319,7 +319,7 @@
 																		<input type="hidden" name="credential_id" id="credential_id" class="form-control" disabled ng-model="editAccess.credential_id">
 																		<label for="">Access Code</label>
 																		<div style="position: relative">
-																			<input type="text" name="access_code" id="access_code" class="form-control" disabled ng-model="editAccess.access_code" required="">
+																			<input type="text" name="access_code" id="access_code" class="form-control access-code-disable"  ng-model="editAccess.access_code" required>
 																			<span class="refreshbtn" ng-click="generateAccessCode()"><i class="fa fa-refresh"></i></span>
 																		</div>
 																	</div>
