--- a/styles/custom.css
+++ b/styles/custom.css
@@ -658,7 +658,7 @@ table.dstatus tr td.online i {
 	position: absolute;
     left: 10px;
     top: 9px;
-	display: none;
+	/*display: none;*/
 	font-size: 13px;
     line-height: 12px;
 }
@@ -3599,5 +3599,5 @@ span.edittxt {position: absolute;
 
 .access-code-disable {
     pointer-events: none;
-    opacity: 0.8;
+    background-color: #f1f1f1;
 }
