--- a/elika-warehouse/views/header.html
+++ b/elika-warehouse/views/header.html
@@ -3,36 +3,33 @@
 		<a class="brand" ui-sref="app.inventory.devices">
 			<span><strong>Elika</strong> Warehouse</span>
 		</a>
-		<a href="javascript:;" class="offcanvas-toggle visible-xs-inline" offcanvas-sidebar><i class="fa fa-bars"></i></a>
+	</div>
+	
+	<div class="mobmenu">
+		<a href="javascript:;" class="animated-arrow">
+			<span></span>
+		</a>
 	</div>
 	
 	<div class="topmenu pull-left">
+		<div class="branding">
+			<a class="brand" ui-sref="app.admin.dashboard">
+				<span><strong>Elika</strong> Warehouse</span>
+			</a>
+		</div>
 		<ul class="nav-right list-inline headmenu">
 			<li><a ui-sref="app.inventory.devices"><span>Inventory</span></a></li>
 			<li><a ui-sref="app.firmware.firmware-management"><span>Firmware</span></a></li>
 			<li class="dropdown" uib-dropdown>
-				<a href class="dropdown-toggle" uib-dropdown-toggle>
-					<span>Administration &nbsp;<fa name="angle-down"></fa></span>
-				</a>
+				<span class="dropdown-toggle" uib-dropdown-toggle>Administrator &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<!-- <li><a ui-sref="app.administrator.roles">Roles Administration</a></li>
-					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
-					<li><a ui-sref="app.administrator.admin">Admin</a></li> -->
 					<li><a ui-sref="app.administrator.roles">Roles</a></li>
 					<li><a ui-sref="app.administrator.add-roles">Add Roles</a></li>
 					<li><a ui-sref="app.administrator.admin">Admin</a></li>
 					<li><a ui-sref="app.administrator.master-admin">Master Admin</a></li>
 				</ul>
 			</li>
-			<li class="dropdown" uib-dropdown>
-				<a href class="dropdown-toggle" uib-dropdown-toggle>
-					<span>Monitoring &nbsp;<fa name="angle-down"></fa></span>
-				</a>
-				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
-					<li><a ui-sref="app.">Monitor Diagnostics</a></li>
-					<li><a ui-sref="app.">Reported Issues</a></li>
-				</ul>
-			</li>
+			<li><a ui-sref="app.diagnostic"><span>Diagnostics</span></a></li>
 			<li><a ui-sref="app.help"><span>Help</span></a></li>
 		</ul>
 	</div>
@@ -111,8 +108,36 @@
 			<ul class="dropdown-menu pull-right panel panel-default animated littleFadeInDown" role="menu">
 				<li><a ui-sref="app.profile-settings"><i class="fa fa-cog" aria-hidden="true"></i> Profile Settings</a></li>
 				<li><a logout-btn><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a></li>
-				<!-- ui-sref="core.login"  -->
 			</ul>
 		</li>
 	</ul>
 </header>
+<script type="text/javascript">
+	$(document).ready(function() {
+		var winw = $(window).width();
+		var winh = $(window).height();
+		
+		var openmmenuh = winh - 45;
+		
+		if(winw<767) {
+			$('.topmenu').attr('style','height:'+openmmenuh+'px;');
+		};		
+		
+		$('.animated-arrow').click(function(){
+			$(this).toggleClass('openmenu');
+			$(this).parent().siblings('.topmenu').toggleClass('openmmenu');
+			$('.page').toggleClass('bodyfix');
+			$('.view-container').toggleClass('bodygray');
+			$('.branding').toggleClass('brand193');
+		});
+		
+		$('#content, .topmenu .dropdown-menu > li > a, #header .topmenu .nav-right > li > a').click(function(){
+			$('.view-container').removeClass('bodygray');
+			$('.animated-arrow').removeClass('openmenu');
+			$('.topmenu').removeClass('openmmenu');
+			$('.page').removeClass('bodyfix');
+			$('.branding').removeClass('brand193');
+		});
+		
+	});
+</script>
