--- a/elika-warehouse/views/tmpl/login.html
+++ b/elika-warehouse/views/tmpl/login.html
@@ -19,13 +19,13 @@
 					<input type="password" placeholder="Password" class="form-control underline-input" ng-model="user.password" required>
 				</div>
 
-				<div style="font-size: 16px; text-align: left; margin: -15px 0 0; color: #ff0000;">{{message}}</div>
+				<div class="login-error">{{message}}</div>
 				
 				<div class="form-group text-left mt-20">        
 					<label class="checkbox checkbox-custom-alt inline-block" style="font-weight: 400;">
 						<input type="checkbox"><i></i> Remember me
 					</label>
-					<!-- <a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/> -->
+					<a ui-sref="core.forgot-password" class="pull-right mt-10" style="font-weight: 400; font-size: 16px; color:#0eba8c;">Forgot Password?</a><br/>
 					<button type="submit" class="btn btn-grey b-0 br-2 mt-10 m-0-auto" ng-click="login()" ng-disabled='form.$invalid'>GO</button>
 				</div>
 			</form>
@@ -37,12 +37,21 @@
 </section>
 <script type="text/javascript">
 	$(document).ready(function() {
-	    var popuph = document.getElementById('hpopup').offsetHeight;
-		$('.w-450').css({
-	        'position' : 'absolute',
-	        'left' : '47.5%',
-	        'top' : '50%',	        
-			'margin-top' : -popuph/2,
-	    });
+		var winw = $(window).width();
+	    var winh = $(window).height();
+		
+		$(window).on('resize',function(){location.reload();});
+		
+		if(winh>449 && winw > 919) {
+			var popuph = document.getElementById('hpopup').offsetHeight;
+			var mtop = popuph - 45;
+			$('.w-450').css({
+				'position' : 'absolute',
+				'left' : '50%',
+				'top' : '50%',	        
+				'margin-top' : -mtop/2,
+				'margin-left' : -30,
+			});
+		}
 	});
 </script>
