--- a/elika-warehouse/views/tmpl/signup.html
+++ b/elika-warehouse/views/tmpl/signup.html
@@ -42,12 +42,21 @@
 </section>
 <script type="text/javascript">
 	$(document).ready(function() {
-	    var popuph = document.getElementById('hpopup').offsetHeight;
-		$('.w-450').css({
-	        'position' : 'absolute',
-	        'left' : '47.5%',
-	        'top' : '50%',	        
-			'margin-top' : -popuph/2,
-	    });
+		var winw = $(window).width();
+	    var winh = $(window).height();
+		
+		$(window).on('resize',function(){location.reload();});
+		
+		if(winh>449 && winw > 919) {
+			var popuph = document.getElementById('hpopup').offsetHeight;
+			var mtop = popuph - 45;
+			$('.w-450').css({
+				'position' : 'absolute',
+				'left' : '50%',
+				'top' : '50%',	        
+				'margin-top' : -mtop/2,
+				'margin-left' : -30,
+			});
+		}
 	});
 </script>
