--- a/views/tmpl/admin/support/technician-profile.html
+++ b/views/tmpl/admin/support/technician-profile.html
@@ -114,9 +114,9 @@
 												<div class="col-sm-6 col-md-6">
 													<label for="">Expiration Date <span class="text-danger">*</span></label>
 													<div class="input-group userexp" ng-controller="DatepickerDemoCtrl">
-														<input type="text" class="form-control" uib-datepicker-popup="{{format}}"  ng-model="addTechnician.expiration_date"
+														<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model-options="{ timezone: 'UTC' }"  ng-model="addTechnician.expiration_date"
 														 min-date="mindate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close"
-														 ng-value="addTechnician.expiration_date" />
+														 />
 														<!--<input type="text" onkeypress="return false;" id="expirationdate" name="expirationdate" class="form-control" uib-datepicker-popup="{{format}}"
 														 ng-model="addTechnician.expirationdate" ng-value="addTechnician.expiration_date"  is-open="opened"
 														 min-date="mindate" datepicker-options="dateOptions" ng-required="true" close-text="Close" />-->
