--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -109,7 +109,7 @@
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
 														<label for="">Description of the Firmware Upgrade <span class="text-danger">*</span></label><br/>
-														<textarea name="ddfs" id="" ng-model="addFirmware.description" class="form-control" placeholder="" required="required"></textarea>
+														<textarea name="ddfs" id="" ng-model="addFirmware.description" class="form-control" placeholder="" required="required" maxlength="255"></textarea>
 													</div>
 												</div>
 											</div>
