--- a/elika-warehouse/views/tmpl/firmware/view-firmware.html
+++ b/elika-warehouse/views/tmpl/firmware/view-firmware.html
@@ -68,7 +68,7 @@
 						<!-- <span class="text-muted">Active</span> -->
 						<div class="mt-40">
 							<!--a ui-sref="app.inventory.edit-device" class="btn btn-rounded-20 btn-sm btn-greensea mr-5">Update Device</a-->
-							<a ng-click="showConfirm($event,firmwareData.firmware_id)" class="btn btn-rounded-20 btn-sm bg-danger">Delete Device</a>
+							<a ng-click="showConfirm($event,firmwareData.firmware_id)" class="btn btn-rounded-20 btn-sm bg-danger">Delete Firmware</a>
 						</div>
 					</div>
 				</section>
