--- a/views/tmpl/admin/schedule/edit-schedule-groups.html
+++ b/views/tmpl/admin/schedule/edit-schedule-groups.html
@@ -609,7 +609,7 @@
 											<div class="col-sm-6 col-md-6 form-group" ng-controller="DatepickerDemoCtrl">
 												<label for="">Start Date <span class="text-danger">*</span></label>
 												<div class="input-group">
-													<input type="text" name="start_date" class="form-control" uib-datepicker-popup="{{format}}"  ng-model="$parent.$parent.schedule.selected_schedule_start_date" min-date="$parent.minDate" is-open="opened" datepicker-options="dateOptions" close-text="Close" onkeypress="return false;"/>
+													<input type="text" name="start_date" class="form-control" uib-datepicker-popup="{{format}}"  ng-model="$parent.$parent.schedule.selected_schedule_start_date" min-date="$parent.minStartDate" is-open="opened" datepicker-options="dateOptions" close-text="Close" onkeypress="return false;"/>
 													<span class="input-group-btn">
 														<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 													</span>
