--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -161,8 +161,9 @@
 														</div>
 													</md-card>
 												</md-content>
-												
-												<span ng-if="dependent_devices.length == '0'">No Records Found</span>
+												<p class="ta-c text-lightred mt-40 mb-40">
+													<span ng-if="dependent_devices.length == '0'">No Records Found</span>
+												</p>
 											</div>
 										</div>
 									</div>
