--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -175,7 +175,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
-								<div class="col-sm-4 col-md-4 filterorder">
+								<div class="col-sm-3 col-md-3 filterorder">
 									<!-- <label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -188,13 +188,13 @@
 										</ul>
 									</label> -->
 								</div>
-								<div class="col-sm-8 col-md-8">
+								<div class="col-sm-6 col-md-6">
 									<div class="row">
-										<div class="col-sm-6 col-md-6 search first">
+										<div class="col-sm-8 col-md-9 search">
 											<input type="text" class="form-control" placeholder="Search by text...." ng-keyup="searchFunction($event)" ng-model="searchText">
 											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
-										</div>
-										<div class="col-sm-6 col-md-6 profilephoto csvupload ta-r">
+										</div>										
+										<div class="col-sm-4 col-md-3 profilephoto csvupload">
 											<div ng-controller="ModalDemo2Ctrl">
 												<script type="text/ng-template" id="myModalContent2.html">
 													<form name="form1" role="form">
