--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -136,7 +136,7 @@
 											<p><label>LCD Name</label>{{userData.user_name_on_lcd}} </p>
 											<p><label>Address</label>{{userData.user_address}}</p>
 											<p><label>Zip Code</label> {{userData.user_zipcode}}</p>
-											<p><label>Password</label> *********</p>
+											<!-- <p><label>Password</label> *********</p> -->
 											<p><label>Status</label>{{userData.user_status}}</p>
 											<p><label>Expiration Date</label>{{userData.user_expiration_date*1000 | date:'dd/MM/yyyy': 'UTC'}}</p>
 										</div>
