--- a/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin-profile.html
@@ -124,6 +124,14 @@
 												<label for="">Zip Code <span class="text-danger">*</span></label>
 												<input type="number" name="" id="" class="form-control" ng-model="userData.user_zipcode">
 											</div>
+
+											<div class="col-sm-6 col-md-6">
+													<label for="">Status <span class="text-danger">*</span></label><br/>
+													<div class="btn-group btnrounded" >
+														<label class="btn btn-default" ng-model="userData.status" uib-btn-radio="1">Active</label>
+														<label class="btn btn-default" ng-model="userData.status" uib-btn-radio="0">Inactive</label>
+													</div>
+												</div>
 											
 										</div>
 										
