--- a/elika-warehouse/views/tmpl/administrator/master-admin.html
+++ b/elika-warehouse/views/tmpl/administrator/master-admin.html
@@ -83,7 +83,8 @@
 												</div>
 												<div class="col-sm-6 col-md-6">				
 													<label for="">Phone <span class="text-danger">*</span></label>
-												<input type="text" name="phone" id="" class="form-control ng-pristine ng-invalid ng-invalid-required ng-valid-pattern ng-touched" ng-model="master.phone" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="+12015550123" required="" aria-required="true" aria-invalid="true">
+												<!-- <input type="text" name="phone" id="" class="form-control" ng-model="master.phone" ui-mask="{{'999 999 9999'}}" required="" ui-mask-placeholder-char="space"> -->
+												<input type="text" name="phone" id="" class="form-control" ng-model="master.phone"  required />
 												</div>
 											</div>
 											<div class="form-group row">
