--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -44,11 +44,11 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Serial Number <span class="text-danger">*</span></label>
-														<input type="text" maxlength="20" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
+														<input type="text" maxlength="32" name="serial_no" id="" ng-model="device.serial_no" class="form-control" placeholder="" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Registration Code <span class="text-danger">*</span></label>
-														<input type="text" name="" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
+														<input type="text" name="" maxlength="32" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
 												<div class="row" >
