--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -80,11 +80,11 @@
 										<div class="row">
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Serial Number <span class="text-danger">*</span></label>
-												<input type="text" name="serial_no" id="" ng-model="editDevice.device_serial_no" class="form-control" disabled placeholder="" required>
+												<input type="text" name="serial_no" id="" maxlength="32" ng-model="editDevice.device_serial_no" class="form-control" disabled placeholder="" required>
 											</div>
 											<div class="form-group col-sm-6 col-md-6">
 												<label for="">Registration Code <span class="text-danger">*</span></label>
-												<input name="registration_code" ng-model="editDevice.device_registration_code" class="form-control" disabled required />
+												<input name="registration_code" maxlength="32" ng-model="editDevice.device_registration_code" class="form-control" disabled required />
 											</div>
 										</div>
 										<div class="row">
