--- a/views/tmpl/admin/door/view-door.html
+++ b/views/tmpl/admin/door/view-door.html
@@ -64,7 +64,7 @@
 											<p><label>Device</label> {{(doorData.device_name == "") ? 'Not Assigned' : doorData.device_name}}</p>
 											<p><label>Name</label> {{doorData.door_name}}</p>
 											<p><label>Facility</label> {{doorData.facility_name}}</p>
-											<p><label>Door Groups</label> Entry Gate</p>
+											<<!-- p><label>Door Groups</label> Entry Gate</p> -->
 											<!-- <p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p> -->
 										</div>
 									</div>
