--- a/views/tmpl/admin/door/view-doors.html
+++ b/views/tmpl/admin/door/view-doors.html
@@ -77,7 +77,7 @@
 												<p><label>Name</label> {{(doorData.device_name == "") ? 'Not Assigned' : doorData.device_name}}</p>
 												<p><label>Facility</label> {{doorData.facility_name}}</p>
 												<p><label>Device</label> {{doorData.device_name}}</p>
-												<p><label>Door Groups</label> </p>
+												<!-- <p><label>Door Groups</label> </p> -->
 												<!-- <p><label>Status</label> {{doorData.door_status == 1 ? 'Active' : 'Inactive'}}</p> -->
 											</div>											
 										</div>
