--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -42,17 +42,17 @@
 																<div class="form-group row">
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">First Name <span class="text-danger">*</span></label>
-																		<input type="text" name="first_name" id="" class="form-control" placeholder="" ng-model="addTechnician.first_name" required="required">
+																		<input type="text" name="first_name" id="" class="form-control" maxlength="15" placeholder="" ng-model="addTechnician.first_name" required="required">
 																	</div>
 																	<div class="col-sm-6 col-md-6">												
 																		<label for="">Last Name <span class="text-danger">*</span></label>
-																		<input type="text" name="last_name" id="" class="form-control" placeholder="" ng-model="addTechnician.last_name" required="required">													
+																		<input type="text" name="last_name" maxlength="15" id="" class="form-control" placeholder="" ng-model="addTechnician.last_name" required="required">													
 																	</div>
 																</div>
 																<div class="form-group row">
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">Email Address <span class="text-danger">*</span></label>
-																		<input type="email" name="email" id="" class="form-control" placeholder=""  ng-model="addTechnician.email" required="required">
+																		<input type="email" name="email" id="" class="form-control" placeholder=""  ng-model="addTechnician.email" maxlength="64" required="required">
 																	</div>
 																	<div class="col-sm-6 col-md-6">																		
 																		<label for="">Phone Number <span class="text-danger">*</span></label>
@@ -66,7 +66,7 @@
 																	</div>
 																	<div class="col-sm-6 col-md-6">
 																		<label for="">Zip Code <span class="text-danger">*</span></label>
-																		<input type="text" name="zip_code" id="" class="form-control" placeholder="" ng-model="addTechnician.zipcode" required="required">
+																		<input type="text" maxlength="6" name="zip_code" id="" class="form-control" placeholder="" ng-model="addTechnician.zipcode" number required="required">
 																	</div>
 																</div>
 																<div class="form-group row" >
