removing dependent device

--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -51,7 +51,7 @@
 														<input type="text" name="" maxlength="32" id="" ng-model="device.registration_code" class="form-control" placeholder="" required>
 													</div>
 												</div>
-												<div class="row" >
+												<div class="row" style="display:none;">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Device Type <span class="text-danger">*</span></label><br/>
 														<div class="btn-group btnrounded" ng-init="device.device_type='master'">
