--- a/views/tmpl/admin/device/view-device.html
+++ b/views/tmpl/admin/device/view-device.html
@@ -46,8 +46,8 @@
 					<div class="tile-body text-center bg-blue p-0"> 
 						<ul class="list-inline tbox m-0">
 							<li class="tcol p-10">
-								<h2 class="m-0">{{details.device_slave_count || 0}}</h2>
-								<span class="text-transparent-white">Dependent Devices</span>
+								<!-- <h2 class="m-0">{{details.device_slave_count || 0}}</h2>
+								<span class="text-transparent-white">Dependent Devices</span> -->
 							</li>
 						</ul>
 					</div>  
@@ -104,7 +104,7 @@
 									</div>
 								</div>
 							</uib-tab>
-							
+							<!--
 							<uib-tab heading="Dependent Devices">
 								<div class="wrap-reset"> 
 									<div class="table-custom">
@@ -168,7 +168,7 @@
 										</div>
 									</div>
 								</div>
-							</uib-tab>
+							</uib-tab>-->
 						</uib-tabset>
 					</div>
 				</section>
