--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -95,7 +95,7 @@
 												</select>
 											</div>
 											<div class="col-sm-6 col-md-6">
-												<div class="row">
+												<div class="row" style="display:none;">
 												
 												
 													<div class="form-group col-sm-6 col-md-6 pr-0">
